[package]
name = "demo-kv"
version = "0.1.0"
edition = "2021"
authors = ["Jingjia Luo <jingjia_luo@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "client"
path = "bin/client.rs"

[dependencies]
concurrent-map = { git = "https://github.com/gloriallluo/concurrent-map", rev = "2e1c9e4" }
bincode = "1.3"
env_logger = "0.10"
futures-core = "0.3"
lazy_static = "1.4"
log = "0.4"
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "sync",
    "time"
] }
tokio-stream = "0.1"
tonic = { version = "0.2", package = "madsim-tonic" }

[build-dependencies]
tonic-build = { version = "0.2", package = "madsim-tonic-build" }

[patch.crates-io]
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "ab251ad" }
